--- a/strapi-project/Dockerfile
+++ b/strapi-project/Dockerfile
@@ -1,22 +1,22 @@
-# Use the official Node.js image as the base image
-FROM node:18
+FROM node:18-alpine
 
-# Create and change to the app directory
 WORKDIR /usr/src/app
 
-# Copy package.json and package-lock.json
-COPY package*.json ./
+# Install PM2 globally
+RUN npm install -g pm2
 
-# Install npm dependencies with verbose logging and clean cache
-RUN npm install -g npm@latest \
-    && npm cache clean --force \
-    && npm install --verbose
+# Copy package.json and package-lock.json to the working directory
+COPY package*.json package-lock.json ./
 
-# Copy the rest of the application code to the working directory
+# Install Strapi and dependencies
+RUN npm install
+
+# Copy the current directory contents into the container at /usr/src/app
 COPY . .
 
-# Expose the application port
+RUN npm run build
+# Expose the port that Strapi runs on
 EXPOSE 1337
 
-# Start the application
-CMD ["npm", "start"]
+# Run Strapi with PM2
+CMD ["pm2-runtime", "start", "npm", "--", "start"]
