--- a/.github/workflows/dockerfile.yml
+++ b/.github/workflows/dockerfile.yml
@@ -1,26 +1,37 @@
-name: build-and-push
+name: Build and Push Docker Image
 
 on:
   push:
     branches:
-      - master
-
+      - master  # or main, depending on your default branch
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Cache Docker layers
+        uses: actions/cache@v3
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
 
       - name: Build Docker image
-        run: docker build -t veera1016/strapi:1.0.0 .
+        run: docker buildx build --tag veera1016/strapi:1.0.0 --file Dockerfile .
 
-      - name: Log in to DockerHub
-        uses: docker/login-action@v1
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Push Docker image to DockerHub
+      - name: Push Docker image to Docker Hub
         run: docker push veera1016/strapi:1.0.0
