--- a/.github/workflows/dockerfile.yml
+++ b/.github/workflows/dockerfile.yml
@@ -1,37 +1,27 @@
-name: Build and Push Docker Image
+
+name: build-and-push
 
 on:
   push:
     branches:
-      - master  # or main, depending on your default branch
+      - master
+
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Cache Docker layers
-        uses: actions/cache@v3
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
+        uses: actions/checkout@v2
 
       - name: Build Docker image
-        run: docker buildx build --tag veera1016/strapi:1.0.0 --file Dockerfile .
+        run: docker build -t veera1016/strapi:1.0.0 .
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+      - name: Log in to DockerHub
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Push Docker image to Docker Hub
+      - name: Push Docker image to DockerHub
         run: docker push veera1016/strapi:1.0.0
