--- a/.github/workflows/dockerfile.yml
+++ b/.github/workflows/dockerfile.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build Docker image
-        run: docker build -t veera1016/strapi:latest .
+        run: docker build -t veera1016/strapidocker:latest .
 
       - name: Log in to DockerHub
         uses: docker/login-action@v1
