--- a/.github/workflows/dockerfile.yml
+++ b/.github/workflows/dockerfile.yml
@@ -23,4 +23,4 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Push Docker image to DockerHub
-        run: docker push veera1016/strapi:1.0.0
+        run: docker push veera1016/strapidocker:latest
